<resources>
    <string name="app_name">YU Course Tools</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gpa_calculator">GPA Calculator</string>
    <string name="menu_grade_calculator">Course Grade Calculator</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="_9_point_gpa_calculator">9 Point GPA Calculator</string>
    <string name="calculated_9_point_gpa_text">Your 9.0 GPA is</string>
    <string name="calculate_gpa">Calculate GPA</string>
    <string name="add_course_button_text">Add Course</string>
    <string name="remove_course_button_text">Remove Course</string>
    <string name="grade_text">Grade</string>
    <string name="credits_text">Credits</string>
    <string name="course_text">Course</string>
    <string name="gpa_calculator_title">GPA Calculator</string>
    <string name="calculated_four_point_gpa_text">Your 4.0 GPA is</string>
    <string name="edit_course_button_text">Edit Course</string>
    <string name="course_list_subtitle">Your Courses:</string>
    <string name="delete_courses">Delete Courses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>