<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yorkucoursetools.EditCourseActivity">

    <EditText
        android:id="@+id/enterCourse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/course_text"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterCredits"
        android:layout_width="63dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/credits_text"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/enterCourse"
        app:layout_constraintStart_toEndOf="@+id/enterCourse" />

    <EditText
        android:id="@+id/enterGrade"
        android:layout_width="62dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/grade_text"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/enterCredits"
        app:layout_constraintStart_toEndOf="@+id/enterCredits" />

    <Button
        android:id="@+id/editCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        android:text="@string/edit_course_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:onClick="editCourse"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterCourse" />

</androidx.constraintlayout.widget.ConstraintLayout>