<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yorkucoursetools.ui.home.HomeFragment">

    <EditText
        android:id="@+id/enterCourse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/course_text"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterCredits"
        android:layout_width="63dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/credits_text"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/enterGrade"
        app:layout_constraintStart_toEndOf="@+id/enterGrade" />

    <EditText
        android:id="@+id/enterGrade"
        android:layout_width="62dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/grade_text"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/enterCourse"
        app:layout_constraintStart_toEndOf="@+id/enterCourse" />

    <Button
        android:id="@+id/addCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/grey"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/add_course_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="src_in"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterCourse" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/darker_grey"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/calculate_gpa"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTintMode="add"
        app:layout_constraintBaseline_toBaselineOf="@+id/addCourseButton"
        app:layout_constraintStart_toEndOf="@+id/addCourseButton" />

    <TextView
        android:id="@+id/ninePointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/calculated_9_point_gpa_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCourseButton" />

    <TextView
        android:id="@+id/fourPointTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/calculated_four_point_gpa_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ninePointTextView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="24sp"
        android:paddingRight="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/courseList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:id="@+id/courseListSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/course_list_subtitle"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourPointTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseListSubtitle"
        tools:listitem="@layout/recyclerview_item" />

    <TextView
        android:id="@+id/gpaNineView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ninePointTextView"
        app:layout_constraintStart_toEndOf="@+id/ninePointTextView" />

    <TextView
        android:id="@+id/gpa4view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fourPointTextView"
        app:layout_constraintStart_toEndOf="@+id/fourPointTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>